//
// Copyright 2023 The Project Oak Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package oak.server;

import "oak_remote_attestation/proto/v1/service_streaming.proto";

option java_multiple_files = true;
option java_package = "com.google.oak.server";

// Secure proxy wraps a service in an encrypted connection.
service SecureProxy {
  // EncryptedConnect creates an encrypted connection between a client and a
  // server, and delegates the processing of the requests to another, unencrypted, service.
  rpc EncryptedConnect(stream oak.session.v1.RequestWrapper)
      returns (stream oak.session.v1.ResponseWrapper) {}
}
